Fix: The today/selected circle in calendar now has a 1px spacing around it, so it doesn't overlay with adjecent month square blocks

--- a/app/styles/module/_calendar.scss
+++ b/app/styles/module/_calendar.scss
@@ -56,6 +56,10 @@
 			&.today, &.event {
 				border-radius: 2em;
 				color: white;
+
+				// Fix to allow a little spacing around circle
+				width: 13.5%;
+				padding-bottom: 6.8%;
 			}
 
 			&.event {
